--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
+  font-family: sans-serif;
 }
 body{
   background-color: rgb(41, 41, 41);
