Basics were finished

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -14,3 +14,8 @@ body{
   background-color: rgb(41, 41, 41);
   color: white;
 }
+.pokedex{
+  background-color: brown;
+  height: 100vh;
+  width: 50%;
+}
