--- a/src/Components/NamesList.module.css
+++ b/src/Components/NamesList.module.css
@@ -1,4 +1,23 @@
 .names{
-    background-color: rgb(211, 211, 211);
     color: rgb(31, 31, 31);
+    display: grid;
+    place-items: center;
+    height: 60%;
+    padding: 15px;
+}
+.names ul{
+    margin-top: 20px;
+    background-color: rgb(211, 211, 211);
+    overflow-y: scroll;
+    width: 60%;
+    height: 100%;
+}
+.names li{
+    cursor: pointer;
+    padding: 15px;
+    width: 100%;
+
+}
+.names li:hover{
+    background-color: rgba(0, 0, 0,0.1);
 }
