--- a/src/App.module.css
+++ b/src/App.module.css
@@ -3,19 +3,55 @@
   src: url('./fonts/Pokemon\ Classic.ttf');
   /* https://dl.dafont.com/dl/?f=pokemon_classic */
 }
-*{
+
+::-webkit-scrollbar {
+  background-color: rgb(0, 0, 0);
+  border-left: 2px solid white;
+  width: 0.75rem;
+  height: 0.75rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(216, 66, 66);
+  transition: 500ms all ease;
+  border: 2px solid white;
+  border-right: 0px;
+}
+
+* {
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
   font-family: 'Pkmn', sans-serif;
 
 }
-body{
+
+body {
   background-color: rgb(41, 41, 41);
   color: white;
+  height:100vh;
+  display: grid;
 }
-.pokedex{
-  background-color: brown;
-  height: 100vh;
-  width: 50%;
+
+.pokedex {
+  padding: 15px;
+  background-color: rgb(233, 130, 130);
+  width: 100%;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+
+.search_button {
+  margin-top: 10px;
+  background-color: black;
+  color: white;
+  padding: 10px;
+  border-radius: 50px;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
 }
